--- a/README
+++ b/README
@@ -1,10 +1,18 @@
-This is the 1.1.1 release of nesC. 
+This is the 1.1.3 release of nesC. 
 
 Installation instructions are in INSTALL. Note that nesC includes a patched
 GNU assembler for the AVR (to support debugging).  An appopriate version of
 the assembler is installed in ncc's support directory (usually
 /usr/local/lib/ncc) based on your installed version of avr-gcc (2.11.2 for
 avr-gcc up to 3.1.1, 2.13.2.1 for later avr-gcc's).
+
+Changes in nesC 1.1.3
+=====================
+- network types: platform-independent types to support heterogeneous
+  networking. See doc/network-types.txt.
+- support passing assembler options for nesC programs with -Wa, as usual w/ gcc
+- support -I- correctly (see gcc manual)
+- initialiser bug fix (some initialisers crashed nesC)
 
 Changes in nesC 1.1.2
 =====================
