regression test update for new syntax, new way of defining network base types

--- a/regress/network/.ok/t8.nc.2
+++ b/regress/network/.ok/t8.nc.2
@@ -1,1 +1,1 @@
-t8.nc:7: Conditional assignment not yet supported for network types
+t8.nc:7: Conditional assignment not supported for network types
