--- a/regress/network/.ok/t8a.nc.2
+++ b/regress/network/.ok/t8a.nc.2
@@ -1,1 +1,1 @@
-t8a.nc:7: Conditional assignment not yet supported for network types
+t8a.nc:7: Conditional assignment not supported for network types
