--- a/regress/abstract/types/.ok/array1e.2
+++ b/regress/abstract/types/.ok/array1e.2
@@ -1,5 +1,5 @@
 In component `test':
 test.nc:3: generic component `mod' requires instantiation arguments
-test.nc:3: parse error
+test.nc:3: syntax error
 test.nc:5: cannot find `mod1'
 test.nc:6: cannot find `mod2'
