--- a/regress/abstract/types/.ok/intf3.1
+++ b/regress/abstract/types/.ok/intf3.1
@@ -1,3 +1,5 @@
+#define nx_struct struct
+#define nx_union union
 typedef int main$sc$t1;
 typedef char *main$sc$t2;
 typedef int /*test.conf1.themod*/mod$0$sc$t1;
