--- a/regress/abstract/types/.ok/noparm2.1
+++ b/regress/abstract/types/.ok/noparm2.1
@@ -1,3 +1,5 @@
+#define nx_struct struct
+#define nx_union union
 typedef int /*test.b1*/aa$0$Basic$crestype;
 typedef int /*test.b2*/aa$1$Basic$crestype;
 typedef int bb$b2$crestype;
