--- a/regress/abstract/types/.ok/parm3.1
+++ b/regress/abstract/types/.ok/parm3.1
@@ -1,3 +1,5 @@
+#define nx_struct struct
+#define nx_union union
 typedef int aa$Basic$crestype;
 typedef int bb$b2$crestype;
 typedef int bb$b1$crestype;
