--- a/regress/abstract/types/.ok/type2e.2
+++ b/regress/abstract/types/.ok/type2e.2
@@ -1,6 +1,6 @@
 In file included from test.nc:3:
 In component `mod':
-mod.nc:1: parse error before `t'
+mod.nc:1: syntax error before `t'
 In component `test':
 test.nc:3: too many arguments to component `mod1'
 test.nc:3: too many arguments to component `mod2'
