--- a/regress/abstract/types/.ok/type5.1
+++ b/regress/abstract/types/.ok/type5.1
@@ -1,3 +1,5 @@
+#define nx_struct struct
+#define nx_union union
 typedef int /*test.mod1*/mod$0$t;
 typedef float */*test.mod2*/mod$1$t;
 static  void /*test.mod1*/mod$0$sc$init(void);
