--- a/regress/abstract/types/.ok/type6.1
+++ b/regress/abstract/types/.ok/type6.1
@@ -1,3 +1,5 @@
+#define nx_struct struct
+#define nx_union union
 typedef int /*test.conf1*/conf$0$t;
 typedef /*test.conf1*/conf$0$t */*test.conf1.themod*/mod$0$t;
 typedef float */*test.conf2*/conf$1$t;
