--- a/regress/abstract/types/.ok/str2.1
+++ b/regress/abstract/types/.ok/str2.1
@@ -1,3 +1,5 @@
+#define nx_struct struct
+#define nx_union union
 static  void /*test.mod1.themod*/mod$0$sc$init(void);
 static  void /*test.mod2.themod*/mod$1$sc$init(void);
 static  
