--- a/regress/abstract/types/.ok/struct6.1
+++ b/regress/abstract/types/.ok/struct6.1
@@ -1,3 +1,5 @@
+#define nx_struct struct
+#define nx_union union
 static  void /*test.mod1*/mod$0$sc$init(void);
 static  void /*test.mod2*/mod$1$sc$init(void);
 static  
