--- a/regress/network/.ok/t2.nc.1
+++ b/regress/network/.ok/t2.nc.1
@@ -44,13 +44,13 @@ typedef int16_t intptr_t;
 
 
 typedef uint16_t uintptr_t;
-# 6 "/usr/local/lib/ncc/nesc_nx.h"
+# 10 "/usr/local/lib/ncc/nesc_nx.h"
 static __inline uint8_t __nesc_ntoh_uint8(void *source);
 
 
 
 static __inline uint16_t __nesc_ntoh_uint16(void *source);
-#line 30
+#line 34
 static __inline int8_t __nesc_ntoh_int8(void *source);
 
 
@@ -66,9 +66,9 @@ static __inline int16_t __nesc_ntoh_int16(void *source);
 
 
 static __inline uint8_t __nesc_hton_uint8(void *target, uint8_t value);
-#line 76
+#line 80
 static __inline int8_t __nesc_hton_int8(void *target, int8_t value);
-#line 93
+#line 187
 typedef struct { char data[1]; } __attribute__((packed)) nx_int8_t;
 typedef struct { char data[2]; } __attribute__((packed)) nx_int16_t;
 typedef struct { char data[4]; } __attribute__((packed)) nx_int32_t;
@@ -77,6 +77,16 @@ typedef struct { char data[1]; } __attribute__((packed)) nx_uint8_t;
 typedef struct { char data[2]; } __attribute__((packed)) nx_uint16_t;
 typedef struct { char data[4]; } __attribute__((packed)) nx_uint32_t;
 typedef struct { char data[8]; } __attribute__((packed)) nx_uint64_t;
+
+
+typedef struct { char data[1]; } __attribute__((packed)) nxle_int8_t;
+typedef struct { char data[2]; } __attribute__((packed)) nxle_int16_t;
+typedef struct { char data[4]; } __attribute__((packed)) nxle_int32_t;
+typedef struct { char data[8]; } __attribute__((packed)) nxle_int64_t;
+typedef struct { char data[1]; } __attribute__((packed)) nxle_uint8_t;
+typedef struct { char data[2]; } __attribute__((packed)) nxle_uint16_t;
+typedef struct { char data[4]; } __attribute__((packed)) nxle_uint32_t;
+typedef struct { char data[8]; } __attribute__((packed)) nxle_uint64_t;
 # 3 "t2.nc"
 nx_struct t2$fun {
   nx_int8_t x;
@@ -84,19 +94,19 @@ nx_struct t2$fun {
 } __attribute__((packed)) t2$a;
 
 int   main(void);
-# 10 "/usr/local/lib/ncc/nesc_nx.h"
+# 14 "/usr/local/lib/ncc/nesc_nx.h"
 static __inline uint16_t __nesc_ntoh_uint16(void *source)
-#line 10
+#line 14
 {
   uint8_t *base = source;
 
-#line 12
+#line 16
   return ((uint16_t )base[0] << 8) | base[1];
 }
 
-#line 33
+#line 37
 static __inline int16_t __nesc_ntoh_int16(void *source)
-#line 33
+#line 37
 {
   return __nesc_ntoh_uint16(source);
 }
@@ -109,36 +119,36 @@ static __inline int16_t __nesc_ntoh_int16(void *source)
 
 
 static __inline uint8_t __nesc_hton_uint8(void *target, uint8_t value)
-#line 44
+#line 48
 {
   uint8_t *base = target;
 
-#line 46
+#line 50
   base[0] = value;
   return value;
 }
 
-#line 76
+#line 80
 static __inline int8_t __nesc_hton_int8(void *target, int8_t value)
-#line 76
+#line 80
 {
   __nesc_hton_uint8(target, value);
   return value;
 }
 
-#line 6
+#line 10
 static __inline uint8_t __nesc_ntoh_uint8(void *source)
-#line 6
+#line 10
 {
   uint8_t *base = source;
 
-#line 8
+#line 12
   return base[0];
 }
 
-#line 30
+#line 34
 static __inline int8_t __nesc_ntoh_int8(void *source)
-#line 30
+#line 34
 {
   return __nesc_ntoh_uint8(source);
 }
