--- a/regress/network/.ok/t4.nc.1
+++ b/regress/network/.ok/t4.nc.1
@@ -44,11 +44,11 @@ typedef int16_t intptr_t;
 
 
 typedef uint16_t uintptr_t;
-# 49 "/usr/local/lib/ncc/nesc_nx.h"
+# 53 "/usr/local/lib/ncc/nesc_nx.h"
 static __inline uint16_t __nesc_hton_uint16(void *target, uint16_t value);
-#line 80
+#line 84
 static __inline int16_t __nesc_hton_int16(void *target, int16_t value);
-#line 93
+#line 187
 typedef struct { char data[1]; } __attribute__((packed)) nx_int8_t;
 typedef struct { char data[2]; } __attribute__((packed)) nx_int16_t;
 typedef struct { char data[4]; } __attribute__((packed)) nx_int32_t;
@@ -57,6 +57,16 @@ typedef struct { char data[1]; } __attribute__((packed)) nx_uint8_t;
 typedef struct { char data[2]; } __attribute__((packed)) nx_uint16_t;
 typedef struct { char data[4]; } __attribute__((packed)) nx_uint32_t;
 typedef struct { char data[8]; } __attribute__((packed)) nx_uint64_t;
+
+
+typedef struct { char data[1]; } __attribute__((packed)) nxle_int8_t;
+typedef struct { char data[2]; } __attribute__((packed)) nxle_int16_t;
+typedef struct { char data[4]; } __attribute__((packed)) nxle_int32_t;
+typedef struct { char data[8]; } __attribute__((packed)) nxle_int64_t;
+typedef struct { char data[1]; } __attribute__((packed)) nxle_uint8_t;
+typedef struct { char data[2]; } __attribute__((packed)) nxle_uint16_t;
+typedef struct { char data[4]; } __attribute__((packed)) nxle_uint32_t;
+typedef struct { char data[8]; } __attribute__((packed)) nxle_uint64_t;
 # 3 "t4.nc"
 nx_struct t4$fun {
   nx_int8_t x;
@@ -64,21 +74,21 @@ nx_struct t4$fun {
 } __attribute__((packed)) t4$a;
 
 int   main(void);
-# 49 "/usr/local/lib/ncc/nesc_nx.h"
+# 53 "/usr/local/lib/ncc/nesc_nx.h"
 static __inline uint16_t __nesc_hton_uint16(void *target, uint16_t value)
-#line 49
+#line 53
 {
   uint8_t *base = target;
 
-#line 51
+#line 55
   base[1] = value;
   base[0] = value >> 8;
   return value;
 }
 
-#line 80
+#line 84
 static __inline int16_t __nesc_hton_int16(void *target, int16_t value)
-#line 80
+#line 84
 {
   __nesc_hton_uint16(target, value);
   return value;
