--- a/regress/network/.ok/t9.nc.1
+++ b/regress/network/.ok/t9.nc.1
@@ -44,9 +44,9 @@ typedef int16_t intptr_t;
 
 
 typedef uint16_t uintptr_t;
-# 10 "/usr/local/lib/ncc/nesc_nx.h"
+# 14 "/usr/local/lib/ncc/nesc_nx.h"
 static __inline uint16_t __nesc_ntoh_uint16(void *source);
-#line 33
+#line 37
 static __inline int16_t __nesc_ntoh_int16(void *source);
 
 
@@ -64,13 +64,13 @@ static __inline uint8_t __nesc_hton_uint8(void *target, uint8_t value);
 
 
 static __inline uint16_t __nesc_hton_uint16(void *target, uint16_t value);
-#line 76
+#line 80
 static __inline int8_t __nesc_hton_int8(void *target, int8_t value);
 
 
 
 static __inline int16_t __nesc_hton_int16(void *target, int16_t value);
-#line 93
+#line 187
 typedef struct { char data[1]; } __attribute__((packed)) nx_int8_t;
 typedef struct { char data[2]; } __attribute__((packed)) nx_int16_t;
 typedef struct { char data[4]; } __attribute__((packed)) nx_int32_t;
@@ -79,6 +79,16 @@ typedef struct { char data[1]; } __attribute__((packed)) nx_uint8_t;
 typedef struct { char data[2]; } __attribute__((packed)) nx_uint16_t;
 typedef struct { char data[4]; } __attribute__((packed)) nx_uint32_t;
 typedef struct { char data[8]; } __attribute__((packed)) nx_uint64_t;
+
+
+typedef struct { char data[1]; } __attribute__((packed)) nxle_int8_t;
+typedef struct { char data[2]; } __attribute__((packed)) nxle_int16_t;
+typedef struct { char data[4]; } __attribute__((packed)) nxle_int32_t;
+typedef struct { char data[8]; } __attribute__((packed)) nxle_int64_t;
+typedef struct { char data[1]; } __attribute__((packed)) nxle_uint8_t;
+typedef struct { char data[2]; } __attribute__((packed)) nxle_uint16_t;
+typedef struct { char data[4]; } __attribute__((packed)) nxle_uint32_t;
+typedef struct { char data[8]; } __attribute__((packed)) nxle_uint64_t;
 # 3 "t9.nc"
 nx_struct t9$fun {
   nx_int8_t x;
@@ -88,57 +98,57 @@ nx_struct t9$fun {
 
 
 int   main(void);
-# 10 "/usr/local/lib/ncc/nesc_nx.h"
+# 14 "/usr/local/lib/ncc/nesc_nx.h"
 static __inline uint16_t __nesc_ntoh_uint16(void *source)
-#line 10
+#line 14
 {
   uint8_t *base = source;
 
-#line 12
+#line 16
   return ((uint16_t )base[0] << 8) | base[1];
 }
 
-#line 33
+#line 37
 static __inline int16_t __nesc_ntoh_int16(void *source)
-#line 33
+#line 37
 {
   return __nesc_ntoh_uint16(source);
 }
 
-#line 49
+#line 53
 static __inline uint16_t __nesc_hton_uint16(void *target, uint16_t value)
-#line 49
+#line 53
 {
   uint8_t *base = target;
 
-#line 51
+#line 55
   base[1] = value;
   base[0] = value >> 8;
   return value;
 }
 
-#line 80
+#line 84
 static __inline int16_t __nesc_hton_int16(void *target, int16_t value)
-#line 80
+#line 84
 {
   __nesc_hton_uint16(target, value);
   return value;
 }
 
-#line 44
+#line 48
 static __inline uint8_t __nesc_hton_uint8(void *target, uint8_t value)
-#line 44
+#line 48
 {
   uint8_t *base = target;
 
-#line 46
+#line 50
   base[0] = value;
   return value;
 }
 
-#line 76
+#line 80
 static __inline int8_t __nesc_hton_int8(void *target, int8_t value)
-#line 76
+#line 80
 {
   __nesc_hton_uint8(target, value);
   return value;
