alpha6 allow attributes on components, interface definitions and other missing spots allow C declarations before module/configuration/component/interface, and   save the macros declared there.   This allows using #include rather than includes, thus getting rid of   the includes-#define brokenness initialiser data structures (ivalue) were not getting instantiated in   generic components. thus, e.g., attributes were incorrectly dumped there.   also cleanup constant-initialiser-required checking (just save the state   in init.c rather than try to reproduce it in nesc-constants.c) fix cpp macro file handling (need to alternate between two files) add -fnesc-dumpfile= option and allow code generation and dumping at the   same time (useful for doing attribute-based checks on all builds)

--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,5 @@
 To build nesC: in this directory
-./configure TOSDIR=<location of your TinyOS tos directory>
-  (note: if you don't specify TOSDIR, configure will try and find a directory
-         named ../tos, then ../../tos, then $HOME/nest/tos before failing)
+./configure [--prefix=<where you want to install nesc]
 make
 
 To install:
@@ -9,3 +7,8 @@ make install
 
 To install a nesC editor mode (currently, emacs, vim, kde):
 Read <installdir>/lib/ncc/editor-modes/<your-editor-name>/readme.txt
+
+To use nesC with TinyOS, you need to install the ncc, mig, etc TinyOS
+frontends for nesC. These are found in tinyos-1.x/tools/src/ncc. Please
+follow the installation directions you find there.
+
