unknown numerical types need to be replaced by the actual type when instantiating generic components to keep our life simple, we forbid using typeof on an expression of unknown numerical type (otherwise, these types can leak to pretty much anywhere, requiring much more complex type instantiation -- essentially complete retyping of the component)

--- a/nregress/dump/.ok/all.tst.1
+++ b/nregress/dump/.ok/all.tst.1
@@ -640,6 +640,13 @@
     </interfacedef>
   </interfacedefs>
   <tags>
+    <enum loc="48:basic/Clock.h" ref="HEX" defined="" size="I:4" alignment="I:4">
+      <type-int cname="int" size="I:4" alignment="I:4"/>
+    </enum>
+    <attribute name="number" ref="HEX" size="V:" alignment="V:">
+    </attribute>
+    <attribute name="integer" ref="HEX" size="V:" alignment="V:">
+    </attribute>
     <attribute name="exactlyonce" loc="20:basic/tos.h" ref="HEX" defined="" size="I:0" alignment="I:1">
     </attribute>
     <struct loc="288:/usr/include/inttypes.h" ref="HEX" defined="" size="I:16" alignment="I:8">
@@ -650,9 +657,6 @@
         <type-int cname="long long" size="I:8" alignment="I:8"/>
       </field>
     </struct>
-    <enum loc="34:basic/Clock.h" ref="HEX" defined="" size="I:4" alignment="I:4">
-      <type-int cname="int" size="I:4" alignment="I:4"/>
-    </enum>
     <attribute name="atmostonce" loc="18:basic/tos.h" ref="HEX" defined="" size="I:0" alignment="I:1">
     </attribute>
     <enum loc="3:basic/tos.h" ref="HEX" defined="" size="I:4" alignment="I:4">
@@ -675,10 +679,10 @@
     <enum loc="39:basic/Timer.h" ref="HEX" defined="" size="I:4" alignment="I:4">
       <type-int cname="int" size="I:4" alignment="I:4"/>
     </enum>
-    <attribute name="empty" loc="15:basic/tos.h" ref="HEX" defined="" size="I:0" alignment="I:1">
-    </attribute>
-    <enum loc="48:basic/Clock.h" ref="HEX" defined="" size="I:4" alignment="I:4">
+    <enum loc="34:basic/Clock.h" ref="HEX" defined="" size="I:4" alignment="I:4">
       <type-int cname="int" size="I:4" alignment="I:4"/>
     </enum>
+    <attribute name="empty" loc="15:basic/tos.h" ref="HEX" defined="" size="I:0" alignment="I:1">
+    </attribute>
   </tags>
 </nesc>
