--- a/nregress/dump/.ok/tags.tst.1
+++ b/nregress/dump/.ok/tags.tst.1
@@ -6,6 +6,13 @@
   <interfacedefs>
   </interfacedefs>
   <tags>
+    <enum loc="48:basic/Clock.h" ref="HEX" defined="" size="I:4" alignment="I:4">
+      <type-int cname="int" size="I:4" alignment="I:4"/>
+    </enum>
+    <attribute name="number" ref="HEX" size="V:" alignment="V:">
+    </attribute>
+    <attribute name="integer" ref="HEX" size="V:" alignment="V:">
+    </attribute>
     <attribute name="exactlyonce" loc="20:basic/tos.h" ref="HEX" defined="" size="I:0" alignment="I:1">
     </attribute>
     <struct loc="288:/usr/include/inttypes.h" ref="HEX" defined="" size="I:16" alignment="I:8">
@@ -16,9 +23,6 @@
         <type-int cname="long long" size="I:8" alignment="I:8"/>
       </field>
     </struct>
-    <enum loc="34:basic/Clock.h" ref="HEX" defined="" size="I:4" alignment="I:4">
-      <type-int cname="int" size="I:4" alignment="I:4"/>
-    </enum>
     <attribute name="atmostonce" loc="18:basic/tos.h" ref="HEX" defined="" size="I:0" alignment="I:1">
     </attribute>
     <enum loc="3:basic/tos.h" ref="HEX" defined="" size="I:4" alignment="I:4">
@@ -41,10 +45,10 @@
     <enum loc="39:basic/Timer.h" ref="HEX" defined="" size="I:4" alignment="I:4">
       <type-int cname="int" size="I:4" alignment="I:4"/>
     </enum>
-    <attribute name="empty" loc="15:basic/tos.h" ref="HEX" defined="" size="I:0" alignment="I:1">
-    </attribute>
-    <enum loc="48:basic/Clock.h" ref="HEX" defined="" size="I:4" alignment="I:4">
+    <enum loc="34:basic/Clock.h" ref="HEX" defined="" size="I:4" alignment="I:4">
       <type-int cname="int" size="I:4" alignment="I:4"/>
     </enum>
+    <attribute name="empty" loc="15:basic/tos.h" ref="HEX" defined="" size="I:0" alignment="I:1">
+    </attribute>
   </tags>
 </nesc>
